syntax = "proto3";

package greet;

option go_package = "./greet/proto";

message GreetRequest {
    string first_name =1;
}

message GreetResponse {
    string result =1;
}

service GreetService{
    rpc Greet(GreetRequest)returns (GreetResponse);
    rpc GreetManyTimes(GreetRequest) returns( stream GreetResponse);
}

// Generate code: $ protoc -Igreet/proto --go_out=. --go_opt=paths=import --go-grpc_out=. greet/proto/greet.proto
